# ili-summarizer

./: INSTALL.md  README.md  setup.cfg
examples/: compute_Bk.py  compute_Pk.py  compute_summaries.py  compute_tpcfs.py  reading_data.ipynb  reading_data_script.py  survey.ipynb
examples/configs/: sample_config.yaml  sample_config_Bk.yaml  sample_config_Pk.yaml
summarizer/: __init__.py  base.py  dataset.py  runner.py
summarizer/cic/: __init__.py  cic.py  draft_openQuijoteHalos_CiCdemo.py  draft_openQuijoteHalos_then2ptCF.py
summarizer/data/: __init__.py  catalogue.py  catalogue_lap_messing.py  quijote_utils.py
summarizer/environment/: __init__.py  density_split.py
summarizer/knn/: compute_knn.py  knn.py
summarizer/three_point/: Bk.py  __init__.py  bskit_main.py
summarizer/two_point/: Pk.py  Pk_cmass.py  Pk_cmass_MattCode.py  __init__.py  corr.py  marked_Pk.py  tools_cmass.py
summarizer/utils/: __init__.py  utils.py
summarizer/vpf/: __init__.py  draft_openQuijoteHalos_VPFdemo_TPCFtest.py  vpf.py
summarizer/wavelet/: __init__.py  wst.py
tests/: conftest.py  test_runner.py
tests/data/: test_catalogue.py  test_dataset.py
tests/summaries_run/: test_all_summaries_work.py  test_all_summaries_work_CMASS.py  testing_summarycalcs_CMASS.py
tests/test_data/: test_dataset.py
tests/two_point/: test_corr.py  test_marked.py  test_pk.py
tests/utils/: test_overdensity.py
