[metadata]
name = summarizer
version = 0.0.0
description = python code to summarize cosmological N-body simulations 

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    pathlib
    xarray

[options.extras_require]
backends = 
    jax
    jaxlib
    kymatio
    nbodykit
    pycorr @ git+https://github.com/cosmodesi/pycorr
    Corrfunc @ git+https://github.com/adematti/Corrfunc@desi 
