[metadata]
name = summarizer
version = 0.0.0
description = python code to summarize cosmological N-body simulations 

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    scipy
    matplotlib
    pandas
    pathlib
    xarray
    astropy

[options.extras_require]
corrfunc =
    numpy<=1.26
    mpi4py
    Corrfunc

pypower =
    cython<=0.29.33
    mpi4py
    pypower @ git+https://github.com/cosmodesi/pypower.git

pycorr =
    cython<=0.29.33
    mpi4py
    pycorr @ git+https://github.com/cosmodesi/pycorr.git

kymatio =
    jax
    jaxlib
    kymatio

polybin =
    tqdm
    icecream
    torch
    PolyBin3D @ git+https://github.com/oliverphilcox/PolyBin3D.git

all =
    %(corrfunc)s
    %(pypower)s
    %(pycorr)s
    %(kymatio)s
    %(polybin)s
